--- a/docker-compose-image-tag.yml
+++ b/docker-compose-image-tag.yml
@@ -69,6 +69,8 @@ services:
       superset-init:
         condition: service_completed_successfully
     volumes: *superset-volumes
+    networks:
+      - analytics-network
 
   superset-init:
     image: *superset-image
@@ -88,6 +90,8 @@ services:
     volumes: *superset-volumes
     healthcheck:
       disable: true
+    networks:
+      - analytics-network
 
   superset-worker:
     image: *superset-image
@@ -110,6 +114,8 @@ services:
           "CMD-SHELL",
           "celery -A superset.tasks.celery_app:app inspect ping -d celery@$$HOSTNAME",
         ]
+    networks:
+      - analytics-network
 
   superset-worker-beat:
     image: *superset-image
@@ -128,6 +134,8 @@ services:
     volumes: *superset-volumes
     healthcheck:
       disable: true
+    networks:
+      - analytics-network
 
 volumes:
   superset_home:
@@ -136,3 +144,6 @@ volumes:
     external: false
   redis:
     external: false
+networks:
+  analytics-network:
+    external: true
