--- a/docker/.env
+++ b/docker/.env
@@ -19,7 +19,7 @@
 PYTHONUNBUFFERED=1
 
 COMPOSE_PROJECT_NAME=superset
-DEV_MODE=true
+DEV_MODE=false
 
 # Port configuration (override in .env-local for multiple instances)
 # NGINX_PORT=80
@@ -70,13 +70,13 @@ SUPERSET_LOG_LEVEL=info
 
 SUPERSET_APP_ROOT="/"
 SUPERSET_ENV=development
-SUPERSET_LOAD_EXAMPLES=yes
+SUPERSET_LOAD_EXAMPLES=false
 CYPRESS_CONFIG=false
 SUPERSET_PORT=8088
 MAPBOX_API_KEY=''
 
 # Make sure you set this to a unique secure random value on production
-SUPERSET_SECRET_KEY=TEST_NON_DEV_SECRET
+SUPERSET_SECRET_KEY=x3q9YVcz6RNO6vqtAJvCtld8jVSNNScS
 ENABLE_PLAYWRIGHT=false
 PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true
 BUILD_SUPERSET_FRONTEND_IN_DOCKER=true
