--- a/docker-compose-image-tag.yml
+++ b/docker-compose-image-tag.yml
@@ -69,6 +69,11 @@ services:
       superset-init:
         condition: service_completed_successfully
     volumes: *superset-volumes
+    environment:
+      - GUNICORN_WORKERS=20
+      - GUNICORN_TIMEOUT=300
+      - GUNICORN_CMD_ARGS=--workers 20 --timeout 300 --limit-request-line 0 --limit-request-field_size 0
+      - SUPERSET_WEBSERVER_TIMEOUT=300
 
   superset-init:
     image: *superset-image
