--- a/docker-compose-image-tag.yml
+++ b/docker-compose-image-tag.yml
@@ -14,76 +14,145 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
+# ULTRA-OPTIMIZED FOR 32GB RAM + 32 CORE CPU
+# Production-Ready High-Performance Configuration
 
-# -----------------------------------------------------------------------
-# We don't support docker compose for production environments.
-# If you choose to use this type of deployment make sure to
-# create you own docker environment file (docker/.env) with your own
-# unique random secure passwords and SECRET_KEY.
-#
-# For verbose logging during development:
-# - Set SUPERSET_LOG_LEVEL=debug in docker/.env-local for detailed Superset logs
-# -----------------------------------------------------------------------
 x-superset-image: &superset-image apachesuperset.docker.scarf.sh/apache/superset:${TAG:-latest-dev}
-x-superset-volumes:
-  &superset-volumes # /app/pythonpath_docker will be appended to the PYTHONPATH in the final container
+x-superset-volumes: &superset-volumes
   - ./docker:/app/docker
   - ./superset-core:/app/superset-core
   - superset_home:/app/superset_home
 
-services:
-  redis:
-    image: redis:7
-    container_name: superset_cache
-    restart: unless-stopped
-    volumes:
-      - redis:/data
+x-superset-environment: &superset-environment
+  DATABASE_DIALECT: postgresql
+  DATABASE_USER: superset
+  DATABASE_PASSWORD: ${DATABASE_PASSWORD:-superset}
+  DATABASE_HOST: db
+  DATABASE_PORT: 5432
+  DATABASE_DB: superset
+  EXAMPLES_USER: superset
+  EXAMPLES_PASSWORD: ${DATABASE_PASSWORD:-superset}
+  EXAMPLES_HOST: db
+  EXAMPLES_PORT: 5432
+  EXAMPLES_DB: superset_examples
+  REDIS_HOST: redis
+  REDIS_PORT: 6379
+  REDIS_CELERY_DB: 0
+  REDIS_RESULTS_DB: 1
+  SUPERSET_LOG_LEVEL: WARNING
+  FLASK_ENV: production
+  PYTHONUNBUFFERED: 1
 
+services:
+  # PostgreSQL - Optimized for 32GB system
   db:
     env_file:
-      - path: docker/.env # default
+      - path: docker/.env
         required: true
-      - path: docker/.env-local # optional override
+      - path: docker/.env-local
         required: false
-    image: postgres:16
+    image: postgres:16-alpine
     container_name: superset_db
     restart: unless-stopped
+    command:
+      - "postgres"
+      - "-c"
+      - "shared_buffers=8GB"
+      - "-c"
+      - "effective_cache_size=24GB"
+      - "-c"
+      - "maintenance_work_mem=2GB"
+      - "-c"
+      - "work_mem=512MB"
+      - "-c"
+      - "max_connections=300"
+      - "-c"
+      - "max_worker_processes=8"
+      - "-c"
+      - "max_parallel_workers_per_gather=4"
+      - "-c"
+      - "max_parallel_workers=8"
+      - "-c"
+      - "max_parallel_maintenance_workers=4"
+      - "-c"
+      - "random_page_cost=1.1"
+      - "-c"
+      - "synchronous_commit=off"
+      - "-c"
+      - "wal_buffers=16MB"
+      - "-c"
+      - "checkpoint_completion_target=0.9"
+      - "-c"
+      - "wal_level=minimal"
+      - "-c"
+      - "default_statistics_target=100"
+      - "-c"
+      - "jit=on"
+      - "-c"
+      - "jit_above_cost=100000"
     volumes:
       - db_home:/var/lib/postgresql/data
       - ./docker/docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U superset"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    resources:
+      limits:
+        cpus: "8"
+        memory: "8G"
+      reservations:
+        cpus: "4"
+        memory: "4G"
 
-  superset:
-    env_file:
-      - path: docker/.env # default
-        required: true
-      - path: docker/.env-local # optional override
-        required: false
-    image: *superset-image
-    container_name: superset_app
-    command: ["/app/docker/docker-bootstrap.sh", "app-gunicorn"]
-    user: "root"
+  # Redis Cache - High Performance In-Memory
+  redis:
+    image: redis:7-alpine
+    container_name: superset_cache
     restart: unless-stopped
-    ports:
-      - 8088:8088
-    depends_on:
-      superset-init:
-        condition: service_completed_successfully
-    volumes: *superset-volumes
-    environment:
-      - GUNICORN_WORKERS=20
-      - GUNICORN_TIMEOUT=300
-      - GUNICORN_CMD_ARGS=--workers 20 --timeout 300 --limit-request-line 0 --limit-request-field_size 0
-      - SUPERSET_WEBSERVER_TIMEOUT=300
+    command:
+      - "redis-server"
+      - "--maxmemory=8gb"
+      - "--maxmemory-policy=allkeys-lru"
+      - "--tcp-backlog=511"
+      - "--timeout=0"
+      - "--tcp-keepalive=300"
+      - "--databases=16"
+      - "--save=60:1000"
+      - "--appendonly=yes"
+      - "--appendfsync=everysec"
+      - "--lazyfree-lazy-eviction=yes"
+      - "--lazyfree-lazy-expire=yes"
+      - "--lazyfree-lazy-server-del=yes"
+      - "--io-threads=4"
+      - "--io-threads-do-reads=yes"
+    volumes:
+      - redis:/data
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    resources:
+      limits:
+        cpus: "4"
+        memory: "8G"
+      reservations:
+        cpus: "2"
+        memory: "4G"
 
+  # Superset Initialization
   superset-init:
     image: *superset-image
     container_name: superset_init
     command: ["/app/docker/docker-init.sh"]
     env_file:
-      - path: docker/.env # default
+      - path: docker/.env
         required: true
-      - path: docker/.env-local # optional override
+      - path: docker/.env-local
         required: false
+    environment: *superset-environment
     depends_on:
       db:
         condition: service_started
@@ -94,15 +163,78 @@ services:
     healthcheck:
       disable: true
 
+  # Superset Web Application - 32 Workers
+  superset:
+    image: *superset-image
+    container_name: superset_app
+    command: ["/app/docker/docker-bootstrap.sh", "app-gunicorn"]
+    user: "root"
+    restart: unless-stopped
+    depends_on:
+      superset-init:
+        condition: service_completed_successfully
+    env_file:
+      - path: docker/.env
+        required: true
+      - path: docker/.env-local
+        required: false
+    environment:
+      <<: *superset-environment
+      GUNICORN_WORKERS: 32
+      GUNICORN_WORKER_CLASS: gthread
+      GUNICORN_THREADS: 2
+      GUNICORN_TIMEOUT: 300
+      GUNICORN_KEEPALIVE: 5
+      GUNICORN_CMD_ARGS: >-
+        --workers 32
+        --worker-class gthread
+        --threads 2
+        --timeout 300
+        --keepalive 5
+        --max-requests 1000
+        --max-requests-jitter 100
+        --bind 0.0.0.0:8088
+        --limit-request-line 0
+        --limit-request-field_size 0
+      SUPERSET_WEBSERVER_TIMEOUT: 300
+    ports:
+      - "8088:8088"
+    volumes: *superset-volumes
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8088/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+    resources:
+      limits:
+        cpus: "14"
+        memory: "12G"
+      reservations:
+        cpus: "8"
+        memory: "8G"
+
+  # Celery Worker - 32 Concurrency
   superset-worker:
     image: *superset-image
     container_name: superset_worker
-    command: ["/app/docker/docker-bootstrap.sh", "worker"]
+    command:
+      - "celery"
+      - "--app=superset.tasks.celery_app:app"
+      - "worker"
+      - "--loglevel=warning"
+      - "--concurrency=32"
+      - "--prefetch-multiplier=4"
+      - "--max-tasks-per-child=1000"
+      - "--time-limit=1800"
+      - "--soft-time-limit=1800"
+      - "-Q"
+      - "default,sql_lab,email,reports"
     env_file:
-      - path: docker/.env # default
+      - path: docker/.env
         required: true
-      - path: docker/.env-local # optional override
+      - path: docker/.env-local
         required: false
+    environment: *superset-environment
     restart: unless-stopped
     depends_on:
       superset-init:
@@ -115,16 +247,28 @@ services:
           "CMD-SHELL",
           "celery -A superset.tasks.celery_app:app inspect ping -d celery@$$HOSTNAME",
         ]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+    resources:
+      limits:
+        cpus: "12"
+        memory: "10G"
+      reservations:
+        cpus: "8"
+        memory: "6G"
 
+  # Celery Beat - Task Scheduler
   superset-worker-beat:
     image: *superset-image
     container_name: superset_worker_beat
     command: ["/app/docker/docker-bootstrap.sh", "beat"]
     env_file:
-      - path: docker/.env # default
+      - path: docker/.env
         required: true
-      - path: docker/.env-local # optional override
+      - path: docker/.env-local
         required: false
+    environment: *superset-environment
     restart: unless-stopped
     depends_on:
       superset-init:
@@ -133,6 +277,13 @@ services:
     volumes: *superset-volumes
     healthcheck:
       disable: true
+    resources:
+      limits:
+        cpus: "2"
+        memory: "2G"
+      reservations:
+        cpus: "1"
+        memory: "1G"
 
 volumes:
   superset_home:
